--- a/index.html
+++ b/index.html
@@ -522,10 +522,11 @@
 
                       <div className="w-full lg:w-1/2 relative">
                           <div className="rounded-3xl overflow-hidden shadow-2xl relative border-4 border-white/50 min-h-[400px] bg-slate-200 flex items-center justify-center group">
-                              <div className="flex flex-col items-center justify-center text-slate-400">
-                                   <ImageIcon className="w-20 h-20 mb-4 opacity-50 group-hover:scale-110 transition-transform duration-500" />
-                                   <span className="font-bold text-lg uppercase tracking-wider">Image Placeholder</span>
-                              </div>
+                              <img 
+                                src="image2.jpg" 
+                                alt="We Kongsi Community" 
+                                className="w-full h-full object-cover transform group-hover:scale-105 transition-transform duration-700"
+                              />
                               <div className="absolute bottom-6 left-6 max-w-xs bg-white/90 backdrop-blur-md p-5 rounded-xl shadow-xl text-brand-navy border border-white/50">
                                   <div className="text-3xl font-bold text-brand-blue mb-1">100%</div>
                                   <div className="text-sm font-semibold opacity-80">Committed to Transparency & Care</div>
@@ -633,10 +634,11 @@
 
                       <div className="lg:w-4/12 relative flex justify-center lg:justify-end">
                           <div className="relative rounded-2xl overflow-hidden shadow-2xl border-4 border-white w-full max-w-md aspect-[16/10] bg-teal-50 flex items-center justify-center group">
-                              <div className="flex flex-col items-center justify-center text-slate-400">
-                                   <ImageIcon className="w-16 h-16 mb-2 opacity-50 group-hover:scale-110 transition-transform duration-500 text-teal-300" />
-                                   <span className="font-bold text-sm uppercase tracking-wider text-teal-300">Image Placeholder</span>
-                              </div>
+                              <img 
+                                src="image3.jpg" 
+                                alt="RM10 Clinic Benefit" 
+                                className="w-full h-full object-cover transform group-hover:scale-105 transition-transform duration-700"
+                              />
                               <div className="absolute inset-0 bg-gradient-to-t from-teal-100/40 via-transparent to-transparent"></div>
                           </div>
                       </div>
@@ -713,12 +715,15 @@
       };
 
       const HospitalNetwork = () => {
-        const PLACEHOLDER_LOGOS = Array(12).fill(null).map((_, i) => ({
+        // Logic to generate 12 items referencing image4.jpg to image15.jpg
+        const NETWORK_ITEMS = Array(12).fill(null).map((_, i) => ({
           id: i,
           label: "Medical Partner",
-          subLabel: "Logo Placeholder"
+          // i=0 -> image4.jpg, i=11 -> image15.jpg
+          image: `image${i + 4}.jpg`
         }));
-        const SCROLL_ITEMS = [...PLACEHOLDER_LOGOS, ...PLACEHOLDER_LOGOS];
+
+        const SCROLL_ITEMS = [...NETWORK_ITEMS, ...NETWORK_ITEMS];
 
         return (
           <section className="py-16 bg-slate-50 border-b border-slate-200 overflow-hidden relative">
@@ -738,12 +743,13 @@
                 {SCROLL_ITEMS.map((item, index) => (
                   <div key={index} className="mx-4">
                     <div className="w-64 h-32 bg-white rounded-xl border-2 border-dashed border-slate-300 flex flex-col items-center justify-center p-4 gap-2 opacity-60 hover:opacity-100 transition-all duration-300 hover:border-brand-blue/50 hover:bg-brand-surface-blue group cursor-default select-none">
-                      <div className="p-3 bg-slate-100 rounded-full group-hover:bg-white transition-colors">
-                          <ImageIcon className="w-8 h-8 text-slate-400 group-hover:text-brand-blue" />
-                      </div>
+                      <img 
+                          src={item.image} 
+                          alt={item.label} 
+                          className="h-16 w-auto object-contain mb-1"
+                      />
                       <div className="text-center">
                           <div className="text-xs font-bold text-slate-400 uppercase tracking-wider group-hover:text-brand-navy">{item.label}</div>
-                          <div className="text-[10px] text-slate-300 font-medium">{item.subLabel}</div>
                       </div>
                     </div>
                   </div>
