--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
 
               <div className="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 relative z-10">
                   <div className="flex flex-col lg:flex-row items-center gap-12 lg:gap-20 mb-16">
-                      <div className="lg:w-8/12 text-left">
+                      <div className="lg:w-7/12 text-left">
                           <div className="inline-flex items-center px-3 py-1 rounded-full bg-brand-teal text-brand-navy text-xs font-bold uppercase tracking-wider mb-6 shadow-sm border-2 border-white">
                               <ShieldCheck className="w-3 h-3 mr-1" /> Exclusive Perk
                           </div>
@@ -634,8 +634,8 @@
                           </div>
                       </div>
 
-                      <div className="lg:w-4/12 relative flex justify-center lg:justify-end">
-                          <div className="relative rounded-2xl overflow-hidden shadow-2xl w-full max-w-md aspect-[16/10] bg-teal-50 flex items-center justify-center group">
+                      <div className="lg:w-5/12 relative flex justify-center lg:justify-end">
+                          <div className="relative rounded-2xl overflow-hidden shadow-2xl w-full max-w-lg aspect-[16/10] bg-teal-50 flex items-center justify-center group">
                               <img 
                                 src="image3.jpg" 
                                 alt="RM10 Clinic Benefit" 
@@ -738,21 +738,16 @@
             </div>
 
             <div className="relative w-full">
-              <div className="absolute top-0 left-0 w-24 md:w-48 h-full bg-gradient-to-r from-slate-50 to-transparent z-10 pointer-events-none"></div>
-              <div className="absolute top-0 right-0 w-24 md:w-48 h-full bg-gradient-to-l from-slate-50 to-transparent z-10 pointer-events-none"></div>
-
+              {/* Marquee Container */}
               <div className="flex w-max animate-marquee hover:[animation-play-state:paused]">
                 {SCROLL_ITEMS.map((item, index) => (
                   <div key={index} className="mx-4">
-                    <div className="w-64 h-32 bg-white rounded-xl shadow-sm flex flex-col items-center justify-center p-4 gap-2 opacity-60 hover:opacity-100 transition-all duration-300 hover:border-brand-blue/50 hover:bg-brand-surface-blue group cursor-default select-none">
+                    <div className="w-64 h-32 bg-white rounded-xl shadow-sm flex flex-col items-center justify-center p-4 gap-2 transition-all duration-300 hover:border-brand-blue/50 hover:bg-brand-surface-blue group cursor-default select-none">
                       <img 
                           src={item.image} 
                           alt={item.label} 
-                          className="h-12 w-auto object-contain mb-1"
+                          className="h-16 w-auto object-contain"
                       />
-                      <div className="text-center">
-                          <div className="text-xs font-bold text-slate-400 uppercase tracking-wider group-hover:text-brand-navy">{item.label}</div>
-                      </div>
                     </div>
                   </div>
                 ))}
@@ -1178,7 +1173,7 @@
                   <div>
                       <h4 className="text-sm font-bold text-slate-800 uppercase tracking-widest mb-4 border-b border-slate-100 pb-2 inline-block">Trusted Technology & Compliance Partners</h4>
                       
-                      <div className="w-full relative overflow-hidden" style={{ maskImage: 'linear-gradient(to right, transparent, black 10%, black 90%, transparent)', WebkitMaskImage: 'linear-gradient(to right, transparent, black 10%, black 90%, transparent)' }}>
+                      <div className="w-full relative overflow-hidden">
                           <div className="flex w-max animate-marquee hover:[animation-play-state:paused] gap-6 items-center py-4">
                               {PARTNERS_SET.map((imgSrc, idx) => (
                                   <div key={`set1-${idx}`} className="bg-white border border-slate-200 shadow-sm rounded-xl min-w-[120px] w-[120px] h-[70px] flex items-center justify-center hover:shadow-lg transition-all hover:border-brand-blue/30 relative overflow-hidden group cursor-pointer flex-shrink-0">
@@ -1186,7 +1181,7 @@
                                           <img 
                                               src={imgSrc} 
                                               alt="Partner" 
-                                              className="w-full h-full object-contain grayscale group-hover:grayscale-0 transition-all duration-300 opacity-60 group-hover:opacity-100" 
+                                              className="w-full h-full object-contain transition-all duration-300" 
                                           />
                                       </div>
                                   </div>
@@ -1197,7 +1192,7 @@
                                           <img 
                                               src={imgSrc} 
                                               alt="Partner" 
-                                              className="w-full h-full object-contain grayscale group-hover:grayscale-0 transition-all duration-300 opacity-60 group-hover:opacity-100" 
+                                              className="w-full h-full object-contain transition-all duration-300" 
                                           />
                                       </div>
                                   </div>
